--- a/Proyectos_1º/HTML-CSS/index.html
+++ b/Proyectos_1º/HTML-CSS/index.html
@@ -2,29 +2,39 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Cotización Bitcoin - Reto 8</title>
+    <title>Informe Financiero - Reto 7</title>
+    
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
-    <div class="tarjeta-crypto">
+    <h1>Resultados Financieros de la Empresa</h1>
+
+    <table>
+        <tr>
+            <th>Año Fiscal</th>
+            <th>Ingresos Totales</th>
+            <th>Beneficio Neto</th>
+        </tr>
         
-        <h2>Bitcoin (BTC)</h2>
+        <tr>
+            <td>2021</td>
+            <td>150.000 €</td>
+            <td>30.000 €</td>
+        </tr>
 
-       <p class="precio">
-            38.540,20 €
-       </p>
+        <tr>
+            <td>2022</td>
+            <td>180.000 €</td>
+            <td>45.000 €</td>
+        </tr>
 
-        <p class="variacion positivo">
-       ▲ +2.45% (920,50 €)
-        </p>
-
-        <div class="detalles">
-            <p><strong>Máx 24h:</strong> 39.100 €</p>
-            <p><strong>Mín 24h:</strong> 37.800 €</p>
-        </div>
-
-    </div>
+        <tr>
+            <td>2023</td>
+            <td>210.000 €</td>
+            <td>60.000 €</td>
+        </tr>
+    </table>
 
 </body>
 </html>
